--- a/config.h.in
+++ b/config.h.in
@@ -1,6 +1,11 @@
 #ifndef _CONFIG_H_
 #define _CONFIG_H_
 
-const char *PROJECT_VERSION = "@PROJECT_VERSION@";
+#define PROJECT_VERSION "@PROJECT_VERSION@"
+#define PROJECT_MAJOR @PROJECT_MAJOR@
+#define PROJECT_MINOR @PROJECT_MINOR@
+#define PROJECT_MICRO @PROJECT_MICRO@
+
+#cmakedefine USE_ASPRINTF
 
 #endif
